[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["adversarial_attack"]

[project]
name = "adversarial_attack"
version = "0.0.1"
description = "A library for conducting Adversarial Attacks on torchvision ResNet models."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["sample", "setuptools", "development"]
authors = [{ name = "Tom Carter", email = "tomcarter017@gmail.com" }]
maintainers = [
  { name = "Tom Carter", email = "tomcarter017@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["torch", "torchvision"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
sample = "adversarial_attack:main"

